# http-partial

./: README.md
dotnet/Controllers/: HomeController.cs
dotnet/Properties/: launchSettings.json
flask/: index.py
node/: index.js
rust/: Cargo.toml
rust/src/: main.rs
